# LlamaGen

./: pyproject.toml  verify_proto_tokens.py
autoregressive/sample/: sample_c2i.py
autoregressive/serve/: llm.py
