[project]
name = "llamagen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.19"
dependencies = [
    "gradio>=6.1.0",
    "pillow>=12.0.0",
    "tensorflow>=2.20.0",
    "tokenizers==0.21.1",
    "torch==2.2.1",
    "torchvision>=0.17.1",
    "vllm==0.4.1",
]
